# tomotopy

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README  README.kr.rst  README.md  README.rst  README_pypi.rst  benchmark.py  example.py  pyproject.toml  requirements.txt  setup.py  unit_test.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml  deploy_test.yml  generate_documentation.yml  numpy_version.py  pull_request_test.yml
document/: document_header.html  pdoc_localization.sh
examples/: coherence.py  corpus_and_inference.py  corpus_and_labeling.py  ctm_network.py  dmr_multi_label.py  dmr_plot.py  dtm.py  dtm_plot.py  extract_ngram.py  gdmr_both_categorical_and_numerical.py  gdmr_plot.py  hdp_basic.py  hdp_visualization.py  hlda_basic.py  lda_basic.py  lda_visualization.py  raw_corpus_and_labeling.py  word_prior.py
html/tomotopy/: corpus.html  index.html  label.html  utils.html
licenses_bundled/: EigenRand
src/: PyUtils.h  pythonDocs.h  pythonModule.cpp
src/Coherence/: CoherenceModel.hpp  Common.h  ConfirmMeasurer.hpp  ProbEstimator.hpp  Segmentor.hpp
src/Labeling/: FoRelevance.cpp  FoRelevance.h  Labeler.h  Phraser.hpp
src/TopicModel/: CIDMRModel.hpp  CT.h  CTModel.cpp  CTModel.hpp  DMR.h  DMRModel.cpp  DMRModel.hpp  DT.h  DTM.h  DTModel.cpp  DTModel.hpp  GDMR.h  GDMRModel.cpp  GDMRModel.hpp  HDP.h  HDPModel.cpp  HDPModel.hpp  HLDA.h  HLDAModel.cpp  HLDAModel.hpp  HPA.h  HPAModel.cpp  HPAModel.hpp  LDA.h  LDACVB0Model.hpp  LDAModel.cpp  LDAModel.hpp  LLDA.h  LLDAModel.cpp  LLDAModel.hpp  MGLDA.h  MGLDAModel.cpp  MGLDAModel.hpp  PA.h  PAModel.cpp  PAModel.hpp  PLDA.h  PLDAModel.cpp  PLDAModel.hpp  PT.h  (+6 more)
src/Utils/: AliasMethod.hpp  Dictionary.cpp  Dictionary.h  EigenAddonOps.hpp  LBFGS.h  LUT.hpp  Mmap.cpp  Mmap.h  MultiNormalDistribution.hpp  PolyaGamma.hpp  PolyaGammaHybrid.hpp  SharedString.cpp  SharedString.h  SharedString.hpp  ThreadPool.hpp  Trie.hpp  TruncMultiNormal.hpp  Utils.hpp  avx512_gamma.h  avx512_mathfun.h  avx_gamma.h  avx_mathfun.h  exception.h  math.h  neon_gamma.h  rtnorm.hpp  sample.hpp  serializer.cpp  serializer.hpp  slp.hpp  sse_gamma.h  sse_mathfun.h  text.hpp  tvector.hpp
src/Utils/LBFGS/: LineSearchBacktracking.h  LineSearchBracketing.h  Param.h
src/python/: HDP.cpp  LDA.cpp  PA.cpp  PyUtils.h  SLDA.cpp  docs.h  label.cpp  label.h  label_docs.h  main.cpp  module.h  py_CT.cpp  py_DMR.cpp  py_DT.cpp  py_GDMR.cpp  py_HDP.cpp  py_HLDA.cpp  py_HPA.cpp  py_LDA.cpp  py_LLDA.cpp  py_MGLDA.cpp  py_PA.cpp  py_PLDA.cpp  py_PT.cpp  py_SLDA.cpp  py_coherence.cpp  py_label.cpp  py_main.cpp  py_rt.cpp  py_utils.cpp  utils.h
src/python/dispatcher/: py_rt.cpp
src/python/handler/: PyUtils.h  coherence.h  docs.h  label.h  label_docs.h  mmap.h  module.h  py_CT.cpp  py_DMR.cpp  py_DT.cpp  py_GDMR.cpp  py_HDP.cpp  py_HLDA.cpp  py_HPA.cpp  py_LDA.cpp  py_LLDA.cpp  py_MGLDA.cpp  py_PA.cpp  py_PLDA.cpp  py_PT.cpp  py_SLDA.cpp  py_coherence.cpp  py_label.cpp  py_main.cpp  py_utils.cpp  utils.h
test/: numpy_version.py  sample.txt  sample_raw.txt  sample_tp.txt  sample_with_md.txt  unit_test.py
tomotopy/: __init__.py  _call_utils.py  _docs_ko.py  _show_progress.py  _summary.py  _version.py  auto_labeling_code.rst  auto_labeling_code_with_porter.rst  coherence.py  documentation.kr.rst  documentation.md  documentation.rst  label.py  models.py  utils.py
tomotopy/viewer/: __init__.py  __main__.py  template.html  viewer_server.py
