[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "tomotopy"
dynamic = ["version"]
description = "Tomoto, Topic Modeling Tool for Python"
readme = "tomotopy/documentation.rst"
license = {text = "MIT"}
authors = [
    { name = "bab2min", email = "bab2min@gmail.com" }
]
keywords = ["NLP", "Topic Model", "LDA", "HDP", "DMR"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/bab2min/tomotopy"
Documentation = "https://bab2min.github.io/tomotopy/"
Repository = "https://github.com/bab2min/tomotopy"
Issues = "https://github.com/bab2min/tomotopy/issues"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.18"
cmake.build-type = "Release"
wheel.packages = ["tomotopy"]
wheel.py-api = "cp39"
wheel.license-files = ["LICENSE"]
sdist.include = [
    "src/**",
    "tomotopy/**",
    "CMakeLists.txt",
]
sdist.exclude = [
    "build",
    "dist",
    "*.egg-info",
    ".git",
    "__pycache__",
]

[tool.scikit-build.cmake.define]
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
USE_STABLE_ABI = "ON"

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.regex"
version.input = "tomotopy/_version.py"

# Platform-specific overrides
[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
if.platform-machine = "arm64"
inherit.cmake.define = "append"
cmake.define.TARGET_ARCH = "arm64"
cmake.define.TOMOTOPY_ISA = "arm64"
cmake.define.BUILD_MULTI_ARCH = "OFF"

[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
if.platform-machine = "x86_64"
inherit.cmake.define = "append"
cmake.define.TARGET_ARCH = "sse2"
cmake.define.TOMOTOPY_ISA = "sse2"
cmake.define.BUILD_MULTI_ARCH = "OFF"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "aarch64"
inherit.cmake.define = "append"
cmake.define.TARGET_ARCH = "arm64"
cmake.define.TOMOTOPY_ISA = "arm64"
cmake.define.BUILD_MULTI_ARCH = "OFF"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "x86_64"
if.env.AUDITWHEEL_PLAT = "many"
inherit.cmake.define = "append"
cmake.define.BUILD_MULTI_ARCH = "ON"
cmake.define.NO_DEBUG_INFO = "ON"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "x86_64"
if.env.AUDITWHEEL_PLAT = false
inherit.cmake.define = "append"
cmake.define.TARGET_ARCH = "native"
cmake.define.TOMOTOPY_ISA = "native"
cmake.define.BUILD_MULTI_ARCH = "OFF"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.BUILD_MULTI_ARCH = "ON"
cmake.define.NO_DEBUG_INFO = "ON"

# Disable stable ABI when TOMOTOPY_NO_STABLE_ABI env var is set
[[tool.scikit-build.overrides]]
if.env.TOMOTOPY_NO_STABLE_ABI = true
inherit.cmake.define = "append"
wheel.py-api = ""
cmake.define.USE_STABLE_ABI = "OFF"
